tests/baselines/reference/ArrowFunctionExpression1.errors.txt
ArrowFunctionExpression1.ts(1,10): error TS2369: A parameter property is only allowed in a constructor implementation.


==== ArrowFunctionExpression1.ts (1 errors) ====
    var v = (public x: string) => { };
             ~~~~~~~~~~~~~~~~
!!! error TS2369: A parameter property is only allowed in a constructor implementation.